# Akinator

./: .gitignore  CMakeLists.txt  README.md
project/data/: res.xml~  script.sh
project/data/fonts/: main_font.fnt
project/data/json/: characters.json  questions.json
project/proj.cmake/: CMakeLists.txt
project/src/: example.cpp  helper.hpp  main.cpp
project/src/Menu/: Menu.h  addcharactermenu.h  addquestiontochar.h  findcharmenu.h  guessmenu.h  keyboardhandler.h  settingsmenu.hpp
project/src/Presenter/: Game_presenter.cpp  Game_presenter.h
project/src/View/: Game_view.cpp  Game_view.h
project/src/akinator/: Akinator.hpp  Algorithm.hpp  Answer.hpp  Character.hpp  DataBase.hpp  Question.hpp
src/: main.cpp
